--- a/workflows/update_contributors.yml
+++ b/workflows/update_contributors.yml
@@ -5,6 +5,9 @@ on:
     - cron: "0 0 * * 0"   # runs weekly on Sunday
   workflow_dispatch:       # allows manual trigger
 
+permissions:
+  contents: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
